--- a/RESPONSER/style.css
+++ b/RESPONSER/style.css
@@ -1,55 +1,63 @@
 body {
-	background-color: #f2f2f2;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: 100vh;
+  background-color: #f2f2f2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 .form {
-	width: 75%;
-	background-color: white;
-	padding: 20px;
-	border-radius: 5px;
+  width: 75%;
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
 input[type="text"] {
-	font-weight: 700;
-	width: 96%;
-	padding: 10px;
-	margin-bottom: 10px;
-	border: 1px solid #ccc;
-	border-radius: 5px;
+  font-weight: 700;
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+}
+
+input[type="submit"],
+button {
+  font-weight: 700;
+  font-size: 1.1em;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
 input[type="submit"] {
-	font-weight: 700;
-	font-size: 1.1em;
-	background-color: #4CAF50;
-	color: white;
-	padding: 10px 20px;
-	border: none;
-	border-radius: 5px;
-	cursor: pointer;
-	
-}
-
-input[type="submit"]:hover {
-	background-color: #45a049;
-}
-
-a {
-	color: white;
-	text-decoration: none;
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px 20px;
 }
 
 button {
-	font-weight: 700;
-	font-size: 1.1em;
-	justify-content: right;
-	background-color: blue;
-	padding: 10px 20px;
-	border: none;
-	border-radius: 5px;
-	cursor: pointer;
+  background-color: blue;
+  color: white;
+  padding: 10px 20px;
+}
+
+input[type="submit"]:hover,
+button:hover {
+  background-color: black;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+}
+
+@media only screen and (max-width: 600px) {
+  .form {
+    width: 90%;
+  }
 }
